--- a/announcements/templates/announcements/index.html
+++ b/announcements/templates/announcements/index.html
@@ -1,11 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Объявления</title>
+  <title>{{ title }}</title>
 </head>
 <body>
-  <p>Page content</p>
+   
 </body>
 </html>
