--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,13 +1,11 @@
-{% load static %}
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-</head>
-<body>
-   
-</body>
-</html>
+
+{% extends 'base.html' %}
+
+{% block title %}About Us{% endblock %}
+
+{% block content %}
+    <!-- Содержимое страницы About Us -->
+    <p>О нас</p>
+{% endblock %}
+{% load static %}
