feat: add registration page and form for it

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -26,4 +26,5 @@
     Odio quaerat totam tempore error in, consequatur id quod quo, laboriosam labore quidem veritatis tempora, harum rem! Sapiente culpa amet corrupti. Debitis nisi architecto aspernatur corporis tempore praesentium! Dolor, ducimus!
     Illo, reiciendis. Excepturi praesentium modi voluptatibus iure quis autem alias numquam eligendi consequatur sit est dolores hic facere error deserunt, explicabo tenetur totam, accusamus fugit quas quod assumenda reiciendis nobis?</p>
 {% endblock %}
+{% block footer %}{% endblock %}
 {% load static %}
