--- a/static/global/scss/main.scss
+++ b/static/global/scss/main.scss
@@ -1,5 +1,10 @@
-@import 'footer.scss', 'header.scss', 'colors.scss';
+@import 'footer.scss', 'header.scss', './vars/colors.scss';
 
+*  {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body, html {
   width: 100%;
@@ -13,8 +18,11 @@ ul, li {
 }
 
 .container {
+  display: grid;
+  grid-template-rows: 80px calc( 100vh - 80px - 20%);
   width: 1440px;
   margin: 0 auto;
+  gap: 20px;
 }
 
 #main {
