--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}My Site{% endblock %}</title>
-    {% block css %} 
-      <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
-    {% endblock %}
-
+    {% block css %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'global/css/main.css' %}">
     <!-- Ваши стили и другие метаданные -->
 </head>
 <body>
@@ -19,11 +16,11 @@
     <header id="header" class="header">
         <div class="header__content">
           <div class="header__logo">
-            <img src="{% static 'icons/logo.png' %}" alt="logo" class="header__logo-img">
+            <img src="{% static 'global/icons/logo.png' %}" alt="logo" class="header__logo-img">
           </div>
           <nav class="header__nav" id="header__nav">
             <ul class="header__nav-list">
-              <li class="header__nav-item">Что-нибудь</li>
+              <li class="header__nav-item">Задачник</li>
               <li class="header__nav-item">Профиль</li>
             </ul>
           </nav>
@@ -38,7 +35,7 @@
 
     
     <footer id="footer" class="footer">
-
+      {% block footer %}{% endblock %}
     </footer>
   </div>
 </body>
