--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,16 @@
           <nav class="header__nav" id="header__nav">
             <ul class="header__nav-list">
               <li class="header__nav-item">Задачник</li>
-              <li class="header__nav-item">Профиль</li>
+              <li class="header__nav-item">
+                {% if user.is_authenticated %}
+                <a href="{% url 'profile' %}">Профиль</a>
+                
+                {% else %}
+                <a href="{% url 'login' %}">Вход</a>
+                
+                {% endif %}
+              
+              </li>
             </ul>
           </nav>
         </div>
