--- a/posts/templates/posts/post-detail.html
+++ b/posts/templates/posts/post-detail.html
@@ -13,6 +13,9 @@
       <p class="content__post-body-author">{{post.author.name}} Говорит:</p>
       <p class="content__post-body-text">{{post.body}}</p>
     </p>
+    <div class="content__post-comments">
+      {{post.comments}}
+    </div>
   </div>
 {% endblock %}
 {% block footer %}{% endblock %}
