--- a/static/global/css/main.css
+++ b/static/global/css/main.css
@@ -15,25 +15,32 @@
   margin: auto;
   align-items: center;
 }
-#header .header__content .header__logo, #header .header__content .header__logo-img {
-  width: 50px;
-  height: 57px;
-}
-#header .header__content #header__nav {
-  width: 15%;
-  height: auto;
-  margin-left: auto;
-}
-#header .header__content #header__nav .header__nav-list {
-  display: flex;
+#header .header__content .header__nav {
   width: 100%;
-  justify-content: space-between;
+}
+#header .header__content .header__nav .header__nav-list {
+  display: flex;
+  justify-content: space-around;
+}
+#header .header__content .header__nav .header__nav-list .nav-item a {
+  text-transform: uppercase;
+}
+#header .header__content .header__nav .header__nav-list .nav-item a:hover {
+  font-weight: 600;
+}
+#header .header__content .header__nav .header__nav-list .nav-item, #header .header__content .header__nav .header__nav-list .nav-item .header__nav-profile-link {
+  display: flex;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 body, html {
