--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 </li>
               {% else %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="/login">Войти</a>
                 </li>
               {% endif %}
 
