--- a/users/static/users/css/main.css
+++ b/users/static/users/css/main.css
@@ -1,9 +1,46 @@
+@charset "UTF-8";
 .content__form-container {
   display: flex;
   width: 360px;
-  height: 360px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
+  height: 320px;
+  margin: auto;
+  margin-top: 3rem;
   flex-direction: column;
+}
+.content__form-container .content__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.content__form-container .content__form .content__form-table {
+  width: 90%;
+  height: 70%;
+  margin: 0 auto;
+}
+.content__form-container .content__form .content__form-table .content__form-table-th > *, .content__form-container .content__form .content__form-table .content__form-table-row > * {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.content__form-container .content__form .content__form-table .content__form-table-row .content__form-td > * {
+  width: 80%;
+  height: 70%;
+}
+.content__form-container .content__form .content__form-confirm-btn {
+  width: 100px;
+  height: 30px;
+}
+.content__form-container .content__link {
+  text-align: center;
+}
+
+::-moz-placeholder {
+  padding: 10px; /* Измените значение по вашему усмотрению */
+}
+
+::placeholder {
+  padding: 10px; /* Измените значение по вашему усмотрению */
 }
