--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,7 +12,7 @@
       {% csrf_token %}
       <table class="content__form-table">
         <th class="content__form-table-th">
-          <h1 class="content__form-title">Вход</h1>
+          <h1 class="content__form-title page-title">Вход</h1>
         </th>
         <tr class="content__form-table-row">
           <!-- <td class="content__form-td">{{form.username.label}}</td> -->
