--- a/static/global/css/main.css
+++ b/static/global/css/main.css
@@ -36,6 +36,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 a {
@@ -65,4 +66,9 @@ ul, li {
 #main {
   width: inherit;
   background-color: #fff;
+}
+
+.page-title {
+  text-transform: uppercase;
+  text-align: center;
 }
