--- a/static/global/scss/main.scss
+++ b/static/global/scss/main.scss
@@ -4,7 +4,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;;
 }
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 300 to 800
+
 
 a {
   text-decoration: none;
@@ -33,4 +37,9 @@ ul, li {
 #main {
   width: inherit;
   background-color: $main-color;
+}
+
+.page-title {
+  text-transform: uppercase;
+  text-align: center;
 }
