--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <title>{% block title %}My Site{% endblock %}</title>
     {% block css %}{% endblock %}
     <link rel="stylesheet" href="{% static 'global/css/main.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">  
     <!-- Ваши стили и другие метаданные -->
 </head>
 <body>
@@ -19,13 +22,13 @@
           <nav class="header__nav" id="header__nav">
             <ul class="header__nav-list">
               {% if user.is_authenticated %}
-     
-                <li class="nav-item">
-                  <a class="header__nav-home-link" href="{% url 'create_post' %}">
-                    Создать публикацию
-                  </a>
-                </li>
-
+                {% if user.is_admin %}
+                  <li class="nav-item">
+                    <a class="header__nav-home-link" href="{% url 'create_post' %}">
+                      Создать публикацию
+                    </a>
+                  </li>
+                {% endif %}
                 <li class="nav-item">
                   <a class="header__nav-home-link" href="{% url 'home' %}">
                     Объявления
